# project_web_apps_isf_place

./: README.md  db.sqlite3  pyproject.toml
management/commands/: bulk.py
myapp/: admin.py  bulk.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_remove_tiles_x_coordinates_and_more.py  0003_alter_tiles_house.py
myapp/static/: style.css
myapp/static/css/: coloris.css  coloris.min.css  menu.css  style.css
myapp/static/js/: coloris.js
myapp/templates/myapp/: base.html  color_picker.html  index.html  leaderboard.html  loading.html  menu.html
mysite/: settings.py  urls.py
